# vaani

./: .gitignore  CLAUDE.md  PLAN.md  README.md  app_entry.py  generate_sounds.py  install.sh  pyproject.toml  setup_app.py  vaani.spec
.cursor/rules/: vaani-conventions.mdc
.github/workflows/: ci.yml  release.yml
casks/: vaani.rb
docs/: index.html
prompts/: context.txt  system.txt
prompts/modes/: bullets.txt  casual.txt  cleanup.txt  professional.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/prompts/: context.txt  system.txt
src-tauri/prompts/modes/: casual.txt  code.txt  funny.txt  minimal.txt  professional.txt
src-tauri/src/: app.rs  commands.rs  config.rs  enhance.rs  error.rs  lib.rs  main.rs  prompts.rs  sounds.rs  state.rs  storage.rs  transcribe.rs  tray.rs  updater.rs
src-tauri/src/audio/: capture.rs  mod.rs  processing.rs  ring_buffer.rs  vad.rs
src-tauri/src/hotkey/: macos.rs  mod.rs
src-tauri/src/keychain/: macos.rs  mod.rs
src-tauri/src/output/: paste.rs
src/vaani/: __init__.py  audio.py  config.py  enhance.py  hotkey.py  main.py  menubar.py  output.py  state.py  storage.py  transcribe.py
src/vaani/prompts/: system.txt
src/vaani/prompts/modes/: bullets.txt  code.txt  funny.txt  minimal.txt
src/vaani/ui/: api.py  onboarding.py  settings.py
src/vaani/ui/web/: app.js  onboarding.html  settings.html  style.css
tests/: conftest.py  test_audio_processing.py  test_config.py  test_enhance.py  test_hotkey.py  test_main.py  test_output.py  test_state.py  test_storage.py  test_transcribe.py
ui/: index.html  onboarding.html  settings.html
ui/css/: onboarding.css  style.css
ui/js/: api.js  onboarding.js  settings.js
